Work on stablizing equality and hashing semantics for calendar components. Equality and hashing working for Events, CalDateTimes, and Calendars. Fixed bug where DateTimes didn't have their sub-second precision truncated #45

--- a/ical.NET/ical.NET.csproj
+++ b/ical.NET/ical.NET.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Serialization\SerializationContext.cs" />
     <Compile Include="Serialization\SerializationSettings.cs" />
     <Compile Include="Utility\AssociationUtil.cs" />
+    <Compile Include="Utility\CollectionHelpers.cs" />
     <Compile Include="Utility\DateUtil.cs" />
     <Compile Include="Utility\RecurrenceUtil.cs" />
     <Compile Include="Utility\SerializationUtil.cs" />
