--- a/NugetTester/NugetTester/NugetTester.csproj
+++ b/NugetTester/NugetTester/NugetTester.csproj
@@ -34,21 +34,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="antlr.runtime, Version=2.7.6.2, Culture=neutral, PublicKeyToken=1790ba318ebc5d56, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ical.Net.2.1.1\lib\net45\antlr.runtime.dll</HintPath>
+    <Reference Include="antlr.runtime, Version=2.7.6.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ical.Net.2.2.2\lib\net46\antlr.runtime.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ical.Net, Version=2.1.0.23684, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ical.Net.2.1.1\lib\net45\Ical.Net.dll</HintPath>
+    <Reference Include="Ical.Net, Version=2.1.0.21448, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ical.Net.2.2.2\lib\net46\Ical.Net.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ical.Net.Collections, Version=2.1.0.23684, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ical.Net.2.1.1\lib\net45\Ical.Net.Collections.dll</HintPath>
+    <Reference Include="Ical.Net.Collections, Version=2.1.0.21446, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ical.Net.2.2.2\lib\net46\Ical.Net.Collections.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NodaTime, Version=1.3.0.0, Culture=neutral, PublicKeyToken=4226afe0d9b296d1, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Ical.Net.2.1.1\lib\net46\NodaTime.dll</HintPath>
+      <HintPath>..\packages\Ical.Net.2.2.2\lib\net46\NodaTime.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Downloaders.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
