--- a/SpecValidation/SpecValidation.csproj
+++ b/SpecValidation/SpecValidation.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICalNetSpecificFormat.cs" />
+    <Compile Include="ICalendarOrgSpecificFormat.cs" />
     <Compile Include="Validate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
