--- a/ical.NET.UnitTests/ical.NET.UnitTests.csproj
+++ b/ical.NET.UnitTests/ical.NET.UnitTests.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="AlarmTest.cs" />
     <Compile Include="AttendeeTest.cs" />
+    <Compile Include="CalendarPropertiesTest.cs" />
     <Compile Include="ComponentTest.cs" />
     <Compile Include="ConcurrentDeserializationTests.cs" />
     <Compile Include="DeserializationTests.cs" />
