--- a/v2/ical.NET.UnitTests/packages.config
+++ b/v2/ical.NET.UnitTests/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NodaTime" version="1.3.1" targetFramework="net461" />
+  <package id="NodaTime" version="2.0.0-alpha20160729" targetFramework="net40" />
   <package id="NUnit" version="3.4.1" targetFramework="net40" />
 </packages>
