BROKEN - Compiles, but unit tests don't pass. Work on replacing list usage with HashSet and Dictionary usage

--- a/v2/ical.NET.Collections/ical.NET.Collections/Ical.Net.Collections.csproj
+++ b/v2/ical.NET.Collections/ical.NET.Collections/Ical.Net.Collections.csproj
@@ -63,6 +63,7 @@
     <AssemblyName>ical.net.collections</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
     <Reference Include="System.Core" />
     <!--  <Reference Include="Microsoft.CSharp" />
     -->
