Fix GetOccurrences bug and the unit test that asserted the wrong behavior #158

--- a/v2/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
+++ b/v2/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="FreeBusyTest.cs" />
     <Compile Include="EventTest.cs" />
     <Compile Include="CopyTest.cs" />
+    <Compile Include="GetOccurrenceTests.cs" />
     <Compile Include="IcsFiles.cs" />
     <Compile Include="JournalTest.cs" />
     <Compile Include="ProgramTest.cs" />
