Make ListExtensions internal, and move it to UnitTest projects, converting usages in ical.net to actual Lists #24

--- a/v2/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
+++ b/v2/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="GetOccurrenceTests.cs" />
     <Compile Include="IcsFiles.cs" />
     <Compile Include="JournalTest.cs" />
+    <Compile Include="ListExtensions.cs" />
     <Compile Include="ProgramTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="app.config" />
