--- a/v3/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
+++ b/v3/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="CopyTest.cs" />
     <Compile Include="IcsFiles.cs" />
     <Compile Include="JournalTest.cs" />
+    <Compile Include="ListExtensions.cs" />
     <Compile Include="ProgramTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="app.config" />
