Fixed some bugs when comparing collections of periods (PeriodList) and generating hashcodes. Implemented IComparable where it made sense to do so. #181

--- a/v2/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
+++ b/v2/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="AlarmTest.cs" />
     <Compile Include="AttendeeTest.cs" />
     <Compile Include="CalendarPropertiesTest.cs" />
+    <Compile Include="CollectionHelpersTests.cs" />
     <Compile Include="ComponentTest.cs" />
     <Compile Include="ConcurrentDeserializationTests.cs" />
     <Compile Include="DateTimeSerializerTests.cs" />
