--- a/v3/Ical.Net.nuspec
+++ b/v3/Ical.Net.nuspec
@@ -15,34 +15,34 @@
     </metadata>
     <files>
         <!-- .NET 4.6 -->
-        <file src="ical.NET\bin\Release\net46\Ical.Net.Collections.dll" target="lib\net46\Ical.Net.Collections.dll" />
-        <file src="ical.NET\bin\Release\net46\Ical.Net.Collections.pdb" target="lib\net46\Ical.Net.Collections.pdb" />
-        <file src="ical.NET\bin\Release\net46\Ical.Net.dll" target="lib\net46\Ical.Net.dll" />
-        <file src="ical.NET\bin\Release\net46\Ical.Net.xml" target="lib\net46\Ical.Net.xml" />
-        <file src="ical.NET\bin\Release\net46\Ical.Net.pdb" target="lib\net46\Ical.Net.pdb" />
-        <file src="ical.NET\bin\Release\net46\antlr.runtime.dll" target="lib\net46\antlr.runtime.dll" />
-        <file src="ical.NET\bin\Release\net46\NodaTime.dll" target="lib\net46\NodaTime.dll" />
-        <file src="ical.NET\bin\Release\net46\antlr.runtime.pdb" target="lib\net46\antlr.runtime.pdb" />
-        <file src="ical.NET\bin\Release\net46\antlr.runtime.xml" target="lib\net46\antlr.runtime.xml" />
+        <file src="ical.net\bin\Release\net46\Ical.Net.Collections.dll" target="lib\net46\Ical.Net.Collections.dll" />
+        <file src="ical.net\bin\Release\net46\Ical.Net.Collections.pdb" target="lib\net46\Ical.Net.Collections.pdb" />
+        <file src="ical.net\bin\Release\net46\Ical.Net.dll" target="lib\net46\Ical.Net.dll" />
+        <file src="ical.net\bin\Release\net46\Ical.Net.xml" target="lib\net46\Ical.Net.xml" />
+        <file src="ical.net\bin\Release\net46\Ical.Net.pdb" target="lib\net46\Ical.Net.pdb" />
+        <file src="ical.net\bin\Release\net46\antlr.runtime.dll" target="lib\net46\antlr.runtime.dll" />
+        <file src="ical.net\bin\Release\net46\NodaTime.dll" target="lib\net46\NodaTime.dll" />
+        <file src="ical.net\bin\Release\net46\antlr.runtime.pdb" target="lib\net46\antlr.runtime.pdb" />
+        <file src="ical.net\bin\Release\net46\antlr.runtime.xml" target="lib\net46\antlr.runtime.xml" />
         <!-- .NET 4.5 -->
-        <file src="ical.NET\bin\Release\net45\Ical.Net.Collections.dll" target="lib\net45\Ical.Net.Collections.dll" />
-        <file src="ical.NET\bin\Release\net45\Ical.Net.Collections.pdb" target="lib\net45\Ical.Net.Collections.pdb" />
-        <file src="ical.NET\bin\Release\net45\Ical.Net.dll" target="lib\net45\Ical.Net.dll" />
-        <file src="ical.NET\bin\Release\net45\Ical.Net.xml" target="lib\net45\Ical.Net.xml" />
-        <file src="ical.NET\bin\Release\net45\Ical.Net.pdb" target="lib\net45\Ical.Net.pdb" />
-        <file src="ical.NET\bin\Release\net45\antlr.runtime.dll" target="lib\net45\antlr.runtime.dll" />
-        <file src="ical.NET\bin\Release\net45\NodaTime.dll" target="lib\net45\NodaTime.dll" />
-        <file src="ical.NET\bin\Release\net45\antlr.runtime.pdb" target="lib\net45\antlr.runtime.pdb" />
-        <file src="ical.NET\bin\Release\net45\antlr.runtime.xml" target="lib\net45\antlr.runtime.xml" />
+        <file src="ical.net\bin\Release\net45\Ical.Net.Collections.dll" target="lib\net45\Ical.Net.Collections.dll" />
+        <file src="ical.net\bin\Release\net45\Ical.Net.Collections.pdb" target="lib\net45\Ical.Net.Collections.pdb" />
+        <file src="ical.net\bin\Release\net45\Ical.Net.dll" target="lib\net45\Ical.Net.dll" />
+        <file src="ical.net\bin\Release\net45\Ical.Net.xml" target="lib\net45\Ical.Net.xml" />
+        <file src="ical.net\bin\Release\net45\Ical.Net.pdb" target="lib\net45\Ical.Net.pdb" />
+        <file src="ical.net\bin\Release\net45\antlr.runtime.dll" target="lib\net45\antlr.runtime.dll" />
+        <file src="ical.net\bin\Release\net45\NodaTime.dll" target="lib\net45\NodaTime.dll" />
+        <file src="ical.net\bin\Release\net45\antlr.runtime.pdb" target="lib\net45\antlr.runtime.pdb" />
+        <file src="ical.net\bin\Release\net45\antlr.runtime.xml" target="lib\net45\antlr.runtime.xml" />
         <!-- .NET 4.0 -->
-        <file src="ical.NET\bin\Release\net40\Ical.Net.Collections.dll" target="lib\net40\Ical.Net.Collections.dll" />
-        <file src="ical.NET\bin\Release\net40\Ical.Net.Collections.pdb" target="lib\net40\Ical.Net.Collections.pdb" />
-        <file src="ical.NET\bin\Release\net40\Ical.Net.dll" target="lib\net40\Ical.Net.dll" />
-        <file src="ical.NET\bin\Release\net40\Ical.Net.xml" target="lib\net40\Ical.Net.xml" />
-        <file src="ical.NET\bin\Release\net40\Ical.Net.pdb" target="lib\net40\Ical.Net.pdb" />
-        <file src="ical.NET\bin\Release\net40\antlr.runtime.dll" target="lib\net40\antlr.runtime.dll" />
-        <file src="ical.NET\bin\Release\net40\NodaTime.dll" target="lib\net40\NodaTime.dll" />
-        <file src="ical.NET\bin\Release\net40\antlr.runtime.pdb" target="lib\net40\antlr.runtime.pdb" />
-        <file src="ical.NET\bin\Release\net40\antlr.runtime.xml" target="lib\net40\antlr.runtime.xml" />
+        <file src="ical.net\bin\Release\net40\Ical.Net.Collections.dll" target="lib\net40\Ical.Net.Collections.dll" />
+        <file src="ical.net\bin\Release\net40\Ical.Net.Collections.pdb" target="lib\net40\Ical.Net.Collections.pdb" />
+        <file src="ical.net\bin\Release\net40\Ical.Net.dll" target="lib\net40\Ical.Net.dll" />
+        <file src="ical.net\bin\Release\net40\Ical.Net.xml" target="lib\net40\Ical.Net.xml" />
+        <file src="ical.net\bin\Release\net40\Ical.Net.pdb" target="lib\net40\Ical.Net.pdb" />
+        <file src="ical.net\bin\Release\net40\antlr.runtime.dll" target="lib\net40\antlr.runtime.dll" />
+        <file src="ical.net\bin\Release\net40\NodaTime.dll" target="lib\net40\NodaTime.dll" />
+        <file src="ical.net\bin\Release\net40\antlr.runtime.pdb" target="lib\net40\antlr.runtime.pdb" />
+        <file src="ical.net\bin\Release\net40\antlr.runtime.xml" target="lib\net40\antlr.runtime.xml" />
     </files>
 </package>
