--- a/v3/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
+++ b/v3/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
@@ -102,11 +102,11 @@
       <Project>{cb7cc882-ed47-46c0-aaae-7a437f22f1c6}</Project>
       <Name>antlr.runtime</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Ical.Net.Collections\Ical.Net.Collections\Ical.Net.Collections.csproj">
+    <ProjectReference Include="..\ical.NET.Collections\ical.NET.Collections\Ical.Net.Collections.csproj">
       <Project>{E04EFEB6-4625-4D58-AC91-7B8B8A2C97BB}</Project>
       <Name>Ical.Net.Collections</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Ical.Net\Ical.Net.csproj">
+    <ProjectReference Include="..\ical.NET\Ical.Net.csproj">
       <Project>{F88DB6D3-CB95-4707-9C88-B53403AADC61}</Project>
       <Name>Ical.Net</Name>
     </ProjectReference>
