--- a/v2/Ical.Net.nuspec
+++ b/v2/Ical.Net.nuspec
@@ -10,6 +10,7 @@
         <description>An iCalendar (RFC 5545) control library for .NET. A fork and continuation of the original dday.ical library including bug fixes and many performance enhancements.</description>
         <projectUrl>https://github.com/rianjs/ical.net</projectUrl>
         <licenseUrl>https://github.com/rianjs/ical.net/blob/master/license.md</licenseUrl>
+        <releaseNotes>https://github.com/rianjs/ical.net/blob/master/release-notes.md</releaseNotes>
         <iconUrl>https://github.com/rianjs/ical.net/raw/master/nuget_logo_150px.png</iconUrl>
         <tags>iCal Calendar icalendar ics outlook events rfc-5545 rfc-2445 dday</tags>
     </metadata>
