Fix for Collection was modified exception. Calling GetOccurrences should properly handle recurrence ids #148 #188

--- a/v3/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
+++ b/v3/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="FreeBusyTest.cs" />
     <Compile Include="CalendarEventTest.cs" />
     <Compile Include="CopyTest.cs" />
+    <Compile Include="GetOccurrenceTests.cs" />
     <Compile Include="IcsFiles.cs" />
     <Compile Include="JournalTest.cs" />
     <Compile Include="ListExtensions.cs" />
