Add unit tests for RequestStatus class

--- a/net-core/Ical.Net/Ical.Net.UnitTests/Ical.Net.UnitTests.csproj
+++ b/net-core/Ical.Net/Ical.Net.UnitTests/Ical.Net.UnitTests.csproj
@@ -13,4 +13,7 @@
     <ProjectReference Include="..\Ical.Net.Collections\Ical.Net.Collections.csproj" />
     <ProjectReference Include="..\Ical.Net\Ical.Net.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DataTypes\" />
+  </ItemGroup>
 </Project>
