Journals, Todos, Events have symmetrical GetHashCode and Equals methods #271

--- a/net-core/Ical.Net/Ical.Net.UnitTests/Ical.Net.UnitTests.csproj
+++ b/net-core/Ical.Net/Ical.Net.UnitTests/Ical.Net.UnitTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.6.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\antlr.runtime\antlr.runtime.csproj" />
