--- a/v2/ical.NET.UnitTests/packages.config
+++ b/v2/ical.NET.UnitTests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NodaTime" version="1.3.1" targetFramework="net461" />
   <package id="NUnit" version="3.4.1" targetFramework="net40" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net40" />
 </packages>
