Better CalDateTime equality and hashing for timezone-sensitive comparisons. A few tweaks to Alarm unit tests because we only care about the absolute time coordinate for testing when they will trigger. Timezones are irrelevant #275

--- a/v2/ical.NET/Ical.Net.csproj
+++ b/v2/ical.NET/Ical.Net.csproj
@@ -184,7 +184,7 @@
     <Compile Include="General\CalendarPropertyList.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="DataTypes\iCalDateTime.cs" />
+    <Compile Include="DataTypes\CalDateTime.cs" />
     <Compile Include="Calendar.cs" />
     <Compile Include="CalendarCollection.cs">
       <SubType>Code</SubType>
