--- a/net-core/Ical.Net/Ical.Net.UnitTests/Ical.Net.UnitTests.csproj
+++ b/net-core/Ical.Net/Ical.Net.UnitTests/Ical.Net.UnitTests.csproj
@@ -1,17 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputType>library</OutputType>
-  </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.6.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="NUnit" Version="3.6.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.8.0-alpha1" />
     <PackageReference Include="System.ValueTuple" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\antlr.runtime\antlr.runtime.csproj" />
     <ProjectReference Include="..\Ical.Net.Collections\Ical.Net.Collections.csproj" />
     <ProjectReference Include="..\Ical.Net\Ical.Net.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Calendars\**\*.ics" />
   </ItemGroup>
 </Project>
