Added null support for constructors / properties in Organizer.cs, CalendarProperty.cs, and Attachment.cs

--- a/v2/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
+++ b/v2/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="CollectionHelpersTests.cs" />
     <Compile Include="ComponentTest.cs" />
     <Compile Include="ConcurrentDeserializationTests.cs" />
+    <Compile Include="DataTypeTest.cs" />
     <Compile Include="DateTimeSerializerTests.cs" />
     <Compile Include="SerializationHelpers.cs" />
     <Compile Include="SimpleDeserializationTests.cs" />
