More consolidation and simplification of interfaces and their implementations

--- a/net-core/Ical.Net/Ical.Net/Ical.Net.csproj
+++ b/net-core/Ical.Net/Ical.Net/Ical.Net.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\Ical.Net.Collections\Ical.Net.Collections.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Interfaces\Serialization\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 </Project>
