Add versions to assembly and PRODID #335

--- a/net-core/Ical.Net/Ical.Net/Ical.Net.csproj
+++ b/net-core/Ical.Net/Ical.Net/Ical.Net.csproj
@@ -1,6 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFrameworks>netstandard1.3</TargetFrameworks>
+    <Version>4.0.1</Version>
+    <Authors>Rian Stockbower, Douglas Day</Authors>
+    <Company />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin\Release\Ical.Net.xml</DocumentationFile>
