--- a/net-core/Ical.Net/Ical.Net.Collections/Ical.Net.Collections.csproj
+++ b/net-core/Ical.Net/Ical.Net.Collections/Ical.Net.Collections.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFrameworks>netstandard1.3</TargetFrameworks>
+    <Version>4.0.1</Version>
+    <Authors>Rian Stockbower, Douglas Day</Authors>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin\Release\Ical.Net.Collections.xml</DocumentationFile>
